# SecCode

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  config.ini  pyproject.toml
datasets/benchmark/java/: java.json
docs/: index.html  main.43071730e342fc4ddc4a.js  main.5fb6d8ee4b9909fc1c9c.css  vendors.a315bfdb937f425e134f.js  vendors.a315bfdb937f425e134f.js.LICENSE.txt
docs/json/testcase-info/: CryptoAES.json  CryptoHash.json  CryptoRandom.json  DeserializationFlexjson.json  DeserializationHessian.json  DeserializationJavaXml.json  DeserializationJodd.json  DeserializationObjectInputStream.json  DeserializationSnakeYaml.json  FileRead.json  FileUnzip.json  FileWrite.json  HardCodeOss.json  InfoLeakSlf4j.json  InfoLeakSpringBootActuator.json  InjectionCommand.json  InjectionCommandRuntime.json  InjectionGroovy.json  InjectionJDBC.json  InjectionJDBCExecuteUpdate.json  InjectionJaxpXpath.json  InjectionMybatisCurd.json  InjectionMybatisGroupBy.json  InjectionMybatisLike.json  InjectionMybatisOrderBy.json  InjectionSpringSpel.json  OpenRedirectServlet.json  RceJavaxScript.json  SSRFApacheHttpClient.json  SSTIFreeMarker.json  SSTIVelocity.json  (+22 more)
scripts/: code_format.sh  install_java_test_deps.sh
sec_code_bench/: __init__.py  e2e.py  eval.py  security_monitor.py
sec_code_bench/editor/: __init__.py
sec_code_bench/evaluator/: base.py  registry.py  universal_evaluator.py
sec_code_bench/llm/: llm_base.py  llm_manager.py  openai.py
sec_code_bench/runner/: __init__.py  runner.py
sec_code_bench/statistic/: pass_at_k_statistic.py  statistic_manager.py
sec_code_bench/tester/: function.py  security.py
sec_code_bench/utils/: cdp_utils.py  config_loader.py  fdisk_utils.py  logger_utils.py  rate_limiter.py  testcase.py
tests/: test_score_calculation.py
(+1407 files in other folders)
